resources/insights-stage/ccx-data-pipeline-stage/io-gathering-service.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: io-gathering-service-instance
  name: io-gathering-service-instance-stage # <- name of the created OpenShift route object, should follow the pattern <service_name>-<environment>
spec:
  host: io-gathering-service.crcs02ue1.urby.p1.openshiftapps.com
  to:
    kind: Service
    name: io-gathering-service-instance # <- name of your OpenShift service object
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect # redirect http to https
    termination: edge
